Fix code block stretching the layout

--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -83,7 +83,6 @@
     padding-top: var(--page-inset-top);
     max-width: 100%;
     contain: style;
-    container-type: inline-size;
 
     &._no-padding-top {
       padding-top: 0;
